--- a/cegesnyelvtanfolyam/style.css
+++ b/cegesnyelvtanfolyam/style.css
@@ -52,7 +52,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     bottom: 0;
     background-color: #223142;
     width: 100%;
-    height: 100px;
     padding: 1.5em 0;
 }
 #header-wrapper .inverted.orange.button {
@@ -171,15 +170,34 @@ h4.mini-header.white {
     float: left;
     margin: 0 5%;
 }
+#header-wrapper h2 {
+    max-width: 25%;
+}
 #header-wrapper a {
     max-width: 180px;
 }
-
+.canvasjs-chart-container {
+    min-height: 400px;
+}
+#welcome-section,
+#about-me {
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f5f7fa+0,c3cfe2+100 */
+    background: #f5f7fa; /* Old browsers */
+    background: -moz-linear-gradient(-45deg, #f5f7fa 0%, #c3cfe2 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #f5f7fa 0%,#c3cfe2 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, #f5f7fa 0%,#c3cfe2 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f7fa', endColorstr='#c3cfe2',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+#about-me p,
+#welcome-section p {
+    font-size: 1em;
+}
 @media only screen and (max-width: 900px) {
     #header-wrapper h1,
     #header-wrapper h2,
     #header-wrapper a {
         display: inline;
+        max-width: none;
     }
 }
 @media only screen and (max-width: 700px) {
